<resources>
    <string name="app_name">Website App</string>

    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="retry">Retry</string>
    <string name="title">Website App</string>
    <string name="nav_head">Navigation header</string>
    <string name="fb">Facebook</string>
    <string name="twt">Twitter</string>
    <string name="ig">Instagram</string>
    <string name="linkdin">LinkedIn</string>
    <string name="recommed">Recommended</string>
    <string name="apps">More Apps</string>
    <string name="rate">Rate Us</string>
    <string name="email">Email Us</string>
    <string name="contact">Contact Us</string>
    <string name="rfrsh">Refresh</string>
    <string name="share">share</string>
</resources>